--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
   --point-color: #2e6873;
   --point-section-color: rgba(181, 221, 184, 0.5);
 }
-body{
+
+body {
   overflow-x: hidden;
 }
 
@@ -34,6 +35,7 @@ h3 {
   color: var(--title-color);
   letter-spacing: 0.08em;
 }
+
 p {
   font-size: 15px;
   font-weight: 400;
@@ -42,7 +44,7 @@ p {
   line-height: 1.5;
 }
 
-button{
+button {
   cursor: pointer;
 }
 
@@ -56,15 +58,18 @@ nav {
   display: flex;
   align-items: center;
 }
+
 nav ul {
   padding-left: 0;
   padding-top: 0.6em;
   margin: 0 auto;
 }
+
 nav ul li {
   display: inline-block;
   padding-left: 2em;
 }
+
 nav ul li a {
   position: relative;
   font-size: 18px;
@@ -72,6 +77,7 @@ nav ul li a {
   letter-spacing: 0.08em;
   color: var(--title-color);
 }
+
 .navi::after {
   position: absolute;
   bottom: 2px;
@@ -84,6 +90,7 @@ nav ul li a {
   visibility: hidden;
   transition: 0.3s;
 }
+
 .navi:hover::after {
   bottom: -4px;
   opacity: 1;
@@ -91,48 +98,50 @@ nav ul li a {
 }
 
 /* humbager menu */
-.hamburger-menu{
+.hamburger-menu {
   display: none;
 }
 
 .hamburger-menu .menu-btn {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    height: 60px;
-    width: 60px;
-    z-index: 90;
-    background-color: rgba(181, 221, 184, 0.9);
-    text-align: center; 
-    
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  height: 60px;
+  width: 60px;
+  z-index: 90;
+  background-color: rgba(181, 221, 184, 0.9);
+  text-align: center;
+
 
 }
-.hamburger-menu .menu-btn i{
+
+.hamburger-menu .menu-btn i {
   font-size: 20px;
   line-height: 3;
   color: var(--title-color);
 }
 
-.hamburger-menu .hide{
+.hamburger-menu .hide {
   display: none;
 }
 
-input[type=checkbox]:checked ~ .menu-btn {
+input[type=checkbox]:checked~.menu-btn {
   display: none;
 }
-input[type=checkbox]:checked ~ .hide{
+
+input[type=checkbox]:checked~.hide {
   display: block;
 }
 
-input[type=checkbox]:checked ~ .hamburger-navi{
+input[type=checkbox]:checked~.hamburger-navi {
   left: 0;
 }
 
 .hamburger-menu #menu-btn-check {
-  display: none; 
+  display: none;
 }
 
-.hamburger-menu .hamburger-navi{
+.hamburger-menu .hamburger-navi {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -142,12 +151,14 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   background-color: var(--point-section-color);
   text-align: center;
 }
-.hamburger-menu .hamburger-navi li{
+
+.hamburger-menu .hamburger-navi li {
   display: block;
   padding-top: 40px;
 
 }
-.hamburger-menu .hamburger-navi li a{
+
+.hamburger-menu .hamburger-navi li a {
   font-size: 20px;
   font-weight: 600;
   color: var(--title-color);
@@ -160,7 +171,7 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   background-image: url("../img/background-hero.jpg");
   width: 100%;
   height: 550px;
-  background-position: left 55% bottom 20%; 
+  background-position: left 55% bottom 20%;
   background-repeat: no-repeat;
   text-align: center;
 }
@@ -171,6 +182,7 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   color: white;
   padding-top: 10px;
 }
+
 /* about */
 .about {
   padding: 30px;
@@ -179,14 +191,18 @@ input[type=checkbox]:checked ~ .hamburger-navi{
 
 .about-container {
   display: flex;
+  align-content: flex-start;
   justify-content: space-between;
   gap: 30px;
   margin-top: 50px;
 }
+
 .about-container img {
+  align-self: flex-start;
   width: 35%;
   border-radius: 25px;
 }
+
 .about-container p {
   text-align: left;
 }
@@ -198,14 +214,20 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   margin-top: 30px;
   text-align: center;
 }
+
 .skills-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  gap: 30px;
+  align-content: flex-start;
+  /* gap: 30px; */
   margin-top: 30px;
   vertical-align: top;
 }
-.skills-container div {
+
+.skills-container li {
+  flex-basis: 30%;
+  min-width: 300px;
   text-align: center;
   position: relative;
   top: 0;
@@ -213,10 +235,12 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   border-radius: 25px;
   padding: 30px 10px;
 }
-.skills-container div:hover {
+
+.skills-container li:hover {
   top: -3px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
 }
+
 .skills-container .skills-icon {
   color: white;
   font-size: 20px;
@@ -224,6 +248,7 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   text-shadow: 10px 10px 10px var(--title-color);
   text-align: center;
 }
+
 .skills-container p {
   text-align: left;
 }
@@ -232,6 +257,7 @@ input[type=checkbox]:checked ~ .hamburger-navi{
 .works {
   padding: 30px;
 }
+
 .works-container {
   display: flex;
   flex-wrap: wrap;
@@ -243,6 +269,7 @@ input[type=checkbox]:checked ~ .hamburger-navi{
 .works-container li {
   position: relative;
   padding-bottom: 10px;
+  flex-basis: 30%;
 }
 
 .works-container img {
@@ -253,25 +280,28 @@ input[type=checkbox]:checked ~ .hamburger-navi{
   box-shadow: 3px 3px 3px var(--title-color);
 }
 
-.works-container .my-own-project button{
+.works-container .my-own-project button {
   display: block;
   margin: 3px auto 0;
   padding: 3px;
-  border: var(--point-color) 1px solid; 
+  border: var(--point-color) 1px solid;
   border-radius: 5%;
   background: var(--point-section-color);
   box-shadow: 0px 12px 24px rgba(46, 127, 123, 0.38);
   transition: .3s;
 }
-.works-container .my-own-project button:hover{
+
+.works-container .my-own-project button:hover {
   box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
   transform: translateY(4px);
 
 }
-.works-container .my-own-project button a{
+
+.works-container .my-own-project button a {
   color: var(--title-color);
   font-size: 15px;
 }
+
 .works-container .my-own-project:hover::after {
   content: "My own project";
   line-height: 3.2;
@@ -301,63 +331,76 @@ input[type=checkbox]:checked ~ .hamburger-navi{
 }
 
 /* contact */
-.contact{
+.contact {
   background-color: var(--point-section-color);
   text-align: center;
   padding: 30px;
 }
+
 .contact form {
   width: 50%;
   margin: 30px auto 0;
   text-align: center;
 }
-.contact form input, textarea{
+
+.contact form input,
+textarea {
   width: 100%;
   display: block;
   margin-top: 1em;
   padding: 1em;
 }
 
-.contact form button{
+.contact form button {
   display: block;
   width: 30%;
-  margin:  1em  auto;
+  margin: 1em auto;
   padding: 0.5em;
 }
+
 @media (max-width: 767px) {
   .about-container {
     display: block;
 
   }
+
   .about-container p {
     margin-top: 30px;
   }
+
   .skills-container {
     display: block;
 
   }
+
   .works-container {
     display: block;
   }
+
   .works-container div {
-   margin-top: 25px;
+    margin-top: 25px;
   }
+
   .works-container img {
     width: 100%;
     height: 300px;
   }
-  .works-container .my-own-project button{
+
+  .works-container .my-own-project button {
     margin-top: 12px;
   }
-  .contact form{
+
+  .contact form {
     width: 80%;
   }
 }
+
 @media (max-width: 500px) {
-header > nav {
-  display: none;
-}
-.hamburger-menu{
-  display: block;
-}
+  header>nav {
+    display: none;
+  }
+
+  .hamburger-menu {
+    display: block;
+  }
 }
